--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/186635.ar">السفير كلايف ألدرتون:ندعم الإصلاحات الجارية في المغرب ونثمن دوره في الساحل وسوريا</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/glasgow-2014-commonwealth-games-to-start-tomorrow--2">Glasgow 2014 Commonwealth Games to start tomorrow</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/226373.pt">Declaração dos Líderes do G-7 sobre a Ucrânia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/first-minister-of-wales-visits-uganda--2">First Minister of Wales visits Uganda</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/reduced-consular-services-at-british-embassy-ljubljana--2">Reduced consular services at British Embassy Ljubljana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/295678.pt">#LOVEisGREAT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/248692.ko">주한영국대사관, 한국인 20 여명에게 영국 정부 쉐브닝 장학금 전달</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/taipei-office-closures--3">Taipei office closures</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/229395.zh-tw">海外申請英國護照的費用調降</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-david-lidington-visits-poland--2">Minister for Europe David Lidington visits Poland</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/197856.zh-tw">世界反死刑日</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--5">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-freedom-of-expression-in-cameroon">UK supports Freedom of Expression in Cameroon</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--5">Turks and Caicos post-Cabinet update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/229283.es">El Reino Unido ratifica el Tratado sobre el comercio de armas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/dfid-improves-corporate-governance-in-tajikistan-and-kyrgyzstan--2">DFID Improves Corporate Governance in Tajikistan and Kyrgyzstan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--4">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/251447.zh-tw">英國貿易文化辦事處對於復興航空GE222班機墜毀事件深表遺憾</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
