--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,15 +406,15 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.ne-derbyshire.gov.uk" class="govuk-link">North East Derbyshire District Council</a></li>
-      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
-      <li><a href="https://www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/" class="govuk-link">Book a coronavirus vaccination - NHS</a></li>
-      <li><a href="http://ec.europa.eu/citizens-initiative" class="govuk-link">The European Citizens&rsquo; Initiative</a></li>
-      <li><a href="https://www.ncsc.gov.uk" class="govuk-link">National Cyber Security Centre</a></li>
-      <li><a href="http://www.justice.gov.uk/courts/procedure-rules/family" class="govuk-link">Family Procedure Rules</a></li>
       <li><a href="http://www.richmondshire.gov.uk" class="govuk-link">Richmondshire District Council</a></li>
-      <li><a href="http://www.cotswold.gov.uk" class="govuk-link">Cotswold District Council</a></li>
-      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="http://www.newark-sherwooddc.gov.uk" class="govuk-link">Newark and Sherwood District Council</a></li>
+      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
+      <li><a href="http://www.ne-derbyshire.gov.uk" class="govuk-link">North East Derbyshire District Council</a></li>
+      <li><a href="https://www.moneyadviceservice.org.uk/en/categories/managing-debt" class="govuk-link">Debt management - Money Advice Service</a></li>
+      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
+      <li><a href="https://www.ncsc.gov.uk" class="govuk-link">National Cyber Security Centre</a></li>
+      <li><a href="http://ec.europa.eu/citizens-initiative" class="govuk-link">The European Citizens&rsquo; Initiative</a></li>
       <li><a href="http://www.liverpool.gov.uk" class="govuk-link">Liverpool City Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
