--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/229395.zh-tw">海外申請英國護照的費用調降</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/reduced-consular-services-at-british-embassy-ljubljana--2">Reduced consular services at British Embassy Ljubljana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/295678.pt">#LOVEisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/295391.es-419">La Embajada Británica celebra en junio el Mes Europeo del Clima en Buenos Aires</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/246679.es-419">Aviation security update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/231480.zh-tw">呼應聯合國最新氣候報告 英國貿易文化辦事處與台達共同呼籲強化節能政策對抗暖化</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/did-you-know-you-may-be-eligible-to-vote-in-the-eu-referendum--2">Did you know you may be eligible to vote in the EU Referendum?</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/structural-survey-of-anguillas-main-jetty-by-major-andy-nixon-mbe">Structural Survey of Anguilla&rsquo;s Main Jetty by Major Andy Nixon MBE</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296094.es">La Embajada Británica busca socio empresarial para Tea Shop en el Pabellón Británico</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/228522.es">David Muñoz y Simon Manley mano a mano en los fogones</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171845.es-419">G8: Oportunidades para todos, incluyendo Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/remembrance-sunday">Remembrance Sunday</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/st-davids-day-declaracion-ministro-principal-de-gales">St. Davids Day: Declaración Ministro Principal de Gales</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/186178.es-419">Haciendo memoria en el olvido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--33">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--5">Turks and Caicos post-Cabinet update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/229283.es">El Reino Unido ratifica el Tratado sobre el comercio de armas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/dfid-improves-corporate-governance-in-tajikistan-and-kyrgyzstan--2">DFID Improves Corporate Governance in Tajikistan and Kyrgyzstan</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--4">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
