--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
-      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
-      <li><a href="http://www.harborough.gov.uk" class="govuk-link">Harborough District Council</a></li>
-      <li><a href="http://www.basingstoke.gov.uk" class="govuk-link">Basingstoke and Deane Borough Council</a></li>
-      <li><a href="http://www.derbyshire.gov.uk" class="govuk-link">Derbyshire County Council</a></li>
-      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
-      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.bracknell-forest.gov.uk" class="govuk-link">Bracknell Forest Borough Council</a></li>
-      <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
+      <li><a href="https://www.moneyadviceservice.org.uk/en/categories/managing-debt" class="govuk-link">Debt management - Money Advice Service</a></li>
       <li><a href="http://www.parliament.uk/business/publications/hansard/" class="govuk-link">Hansard - UK Parliament</a></li>
+      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
+      <li><a href="http://www.mendip.gov.uk" class="govuk-link">Mendip District Council</a></li>
+      <li><a href="http://www.bromsgrove.gov.uk" class="govuk-link">Bromsgrove District Council</a></li>
+      <li><a href="http://www.justice.gov.uk/courts/procedure-rules/family" class="govuk-link">Family Procedure Rules</a></li>
+      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
+      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
+      <li><a href="http://www.canterbury.gov.uk" class="govuk-link">Canterbury City Council</a></li>
+      <li><a href="http://www.basingstoke.gov.uk" class="govuk-link">Basingstoke and Deane Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
